# cms

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
admin/: package-lock.json  package.json  vite.config.js
admin/src/api/: client.js
admin/src/components/: DynamicEntryForm.vue
admin/src/layouts/: AdminLayout.vue
admin/src/pages/: DashboardPage.vue  LoginPage.vue  RegisterPage.vue
admin/src/router/: index.js
admin/src/stores/: auth.js  content.js
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.js  scripts.seed.js  server.js
backend/src/config/: env.js  prisma.js
backend/src/controllers/: auth.controller.js  contentType.controller.js  dataset.controller.js  entries.controller.js  media.controller.js
backend/src/middleware/: auth.middleware.js  error.middleware.js  token.middleware.js
backend/src/routes/: auth.routes.js  contentType.routes.js  dataset.routes.js  dynamic.routes.js  media.routes.js
backend/src/services/: auth.service.js  contentType.service.js  dataset.service.js  entry.service.js  media.service.js
backend/src/utils/: jwt.js  schema.js  token.js
cms/: __init__.py
cms/static/: styles.css
cms/templates/: base.html  dashboard.html  deployment_form.html  deployments.html  login.html  page_form.html  page_view.html  pages.html  register.html  website_form.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
tests/: test_app.py
website/: README.md  package-lock.json  vite.config.js
website/src/: App.jsx  index.css
(+8 files in other folders)
